<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/darker"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="100dp"
            android:gravity="center"
            android:text="Welcome!"
            android:textColor="@color/beige"
            android:textSize="30dp"
            android:fontFamily="sans-serif-condensed"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/profile"/>

    </LinearLayout>


    <TextView
        android:id="@+id/mainpagetitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_your_test"
        android:textColor="@color/beige"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginBottom="100dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_green"
        android:text="@string/reminder"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_green"
        android:text="@string/log_out"
        android:layout_marginTop="80dp"/>

</LinearLayout>
